# ECS

./: .clang-format  .gitignore  CMakeLists.txt  Makefile
include/: definitions.hpp
lib/: CMakeLists.txt
src/: App.cpp  App.hpp  Vector.hpp  main.cpp
tests/: CMakeLists.txt  imgui_test.cpp
